clear gradle.properties key store and pgyer appid

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,10 +17,10 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 # key store
-KEY_ALIAS = delta
-KEY_PASSWORD = qqq987546
-STORE_FILE = D:/Android/keystore/com.example.bill.delta.jks
-STORE_PASSWORD = qqq987546
+KEY_ALIAS = 
+KEY_PASSWORD =
+STORE_FILE =
+STORE_PASSWORD =
 
 # pgyer appid
-PGYER_APPID_VALUE= 531f0b42bb86edfa902b32560e705b6c
+PGYER_APPID_VALUE=
